--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <button><img src="images/search.png"></button>
         </div>
 
-    <div class="Weather">
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
+    </div>
+
+    <div class="weather">
         <img src="images/clear.png" class="weather-icon">
         <h1 class="temp">22°C</h1>
         <h2 class="city">New York</h2>
@@ -33,7 +38,7 @@
                     <p>Wind Speed</p>
                 </div>
             </div>
-        </div>          
+        </div>                  
 
 
 
@@ -41,9 +46,59 @@
 
 
   
-  
-  
-  
+
+
+
+    <script>
+        const apiKey = "624f140c16a2813fcd290ac6223bd74d";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric";
+
+const searchBox = document.querySelector(".search input");
+const searchBtn = document.querySelector(".search button");
+
+async function checkWeather(city) {
+    try {
+        const response = await fetch(apiUrl + "&q=" + city + `&appid=${apiKey}`);
+        if (!response.ok) {
+            throw new Error("City not found");
+        }
+        var data = await response.json();
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°C";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%"; 
+        document.querySelector(".wind").innerHTML = data.wind.speed + "km/h";
+
+        let weatherIcon = document.querySelector(".weather-icon");
+
+        if (data.weather[0].main === "Clouds") {
+            weatherIcon.src = "images/cloud.png";
+        } else if (data.weather[0].main === "Clear") {
+            weatherIcon.src = "images/clear.png";
+        } else if (data.weather[0].main === "Rain") {
+            weatherIcon.src = "images/rain.png";
+        } else {
+            weatherIcon.src = "images/cloud.png";
+        }           
+
+        document.querySelector(".weather").style.display = "block";
+
+    } catch (error) {
+        alert("City not found. Please enter a valid city name.");
+    }
+}
+
+searchBtn.addEventListener("click", () => {
+    checkWeather(searchBox.value);
+});
+
+// Allow search using "Enter" key
+searchBox.addEventListener("keypress", (event) => {
+    if (event.key === "Enter") {
+        checkWeather(searchBox.value);
+    }
+});
+    </script>
   
    
 </body>
